# Inside of setup.cfg
[metadata]
name = openviduconnect
version = attr: openviduconnect.__version__
url = https://github.com/amoghmadan/openviduconnect
author = Amogh Madan
author_email = amoghmadaan@gmail.com
license = MIT
platform = any
description = Wrapper to OpenVidu REST APIs
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation = https://github.com/amoghmadan/openviduconnect

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    httpx
